<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="bahasa">bahasa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="film">Movie</string>
    <string name="tv">TV Show</string>
    <string name="cek">Retrive data</string>
    <string name="pesan_error">Check your network</string>
    <string name="rilis">Release</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>
    <string name="favorit">Favorite</string>
    <string name="membatalkan_fav">Cancel Favorites</string>
    <string name="menambah_fav">Add Favorites</string>
    <string name="cari_movie">Search Movie</string>
    <string name="cari_tv">Search TV Show</string>

    <string name="summary_release_reminder">Turn on/off new movie release reminder. You will receive daily movie release info at 8AM</string>
    <string name="summary_daily_reminder">Turn on/off daily reminder. You will receive daily reminder at 7AM</string>
    <string name="language_select">English</string>
    <string name="message_daily">Let\'s check Catalogue Movie to get new movies info</string>
    <string name="description_empty">Not available in english</string>
    <string name="film_favorite_empty">Movie favorite is empty</string>
    <string name="tv_favorite_empty">Tv show favorite is empty</string>
    <string name="language">Language</string>
    <string name="daily_reminder">Daily reminder</string>
    <string name="release_reminder">Release reminder</string>
</resources>
