<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notif.SettingActivity"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/btn_bahasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image"
            android:src="@drawable/translation"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/image"
            android:layout_marginLeft="15dp">
            <TextView
                android:id="@+id/tv_bahasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:text="@string/language_select"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="5dp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#a6a6a6"/>
        </LinearLayout>
        <ImageView
            android:layout_alignParentRight="true"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/btn_daily"
        android:layout_marginTop="15dp"
        android:layout_below="@id/btn_bahasa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_daily"
            android:src="@drawable/ic_access_alarms_black_24dp"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/image_daily"
            android:layout_marginLeft="15dp">
            <TextView
                android:id="@+id/tv_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_reminder"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"/>
            <Switch
                android:id="@+id/sw_daily"
                android:text="@string/summary_daily_reminder"
                android:paddingLeft="10dp"
                android:switchPadding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#a6a6a6"/>
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/btn_movie_release"
        android:layout_marginTop="15dp"
        android:layout_below="@id/btn_daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/image_movie_release"
            android:src="@drawable/ic_movie_filter_black_24dp"
            android:layout_width="30dp"
            android:layout_height="30dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toRightOf="@id/image_movie_release"
            android:layout_marginLeft="15dp">
            <TextView
                android:id="@+id/tv_movie_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_reminder"
                android:textSize="18sp"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/black"/>
            <Switch
                android:id="@+id/sw_release"
                android:text="@string/summary_release_reminder"
                android:paddingLeft="10dp"
                android:switchPadding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#a6a6a6"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>